# opa-rs

./: Cargo.toml  Cross.toml  README.md  example.rego
docker/: Dockerfile.armv7-unknown-linux-gnueabihf
examples/: eval.rs  example.rego  input.json
opa-bench/: Cargo.toml
opa-bench/benches/: activity.rego  activity.rs  simple.rego  simple_eval.rs
opa-bench/examples/: activity.rego  activity.rs
opa-compiler/: Cargo.toml
opa-compiler-sys/: Cargo.toml  build.rs  opa.go
opa-compiler/src/: lib.rs
opa-compiler/tests/: compile.rs
opa-go/: Cargo.toml
opa-go-sys/: Cargo.toml  build.rs  go.mod  go.sum  opa.go  opa_test.go
opa-go/src/: lib.rs  wasm.rs
opa-go/tests/: compile.rs  empty.wasm
opa-rego/: Cargo.toml
opa-rego/src/: lib.rs
opa-wasm/: Cargo.toml
opa-wasm/examples/: eval.rs  input.json
opa-wasm/proptest-regressions/opa/: mod.txt
opa-wasm/src/: error.rs  lib.rs  set.rs
opa-wasm/src/builtins/: mod.rs  sets.rs  types.rs
opa-wasm/src/opa/: error.rs  set.rs
opa-wasm/src/opa_serde/: de.rs  error.rs  mod.rs  ser.rs  set.rs
opa-wasm/src/runtime/: mod.rs
opa-wasm/src/value/: de.rs  index.rs  number.rs  ser.rs
opa-wasm/tests/: eval_struct_test.rego  eval_struct_test.rs  types.rego  types.rs
src/: builtins.rs  error.rs  functions.rs  lib.rs  main.rs
src/builtins/: aggregates.rs  arrays.rs  mod.rs  net.rs  numbers.rs  objects.rs  regex.rs  sets.rs  strings.rs  time.rs  types.rs
src/opa/: de.rs  error.rs  mod.rs  ser.rs  set.rs
src/runtime/: mod.rs  wasmi.rs
src/value/: de.rs  from.rs  mod.rs  number.rs  ser.rs
src/wasm/: mod.rs  wasmi.rs  wasmtime.rs
tests/: empty.rego
