[package]
name = "policy"
version = "0.1.0"
authors = ["Mike Yagley <myagley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
ordered-float = { version = "1.0.2", features = ["serde"] }
serde = "1"
serde_json = "1.0"
tempfile = "3"
thiserror = "1.0"
wasmtime = "0.12.0"
