[package]
name = "opa-compiler-sys"
version = "0.1.0"
authors = ["Mike Yagley <myagley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.53"
gobuild = { version = "0.1.0-alpha.1", git = "https://github.com/myagley/gobuild" }
