[package]
name = "opa-wasm"
version = "0.1.0"
authors = ["Mike Yagley <myagley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
ipnetwork = "0.16"
lazy_static = "1"
ordered-float = { version = "1.0.2", features = ["serde"] }
regex = "1"
serde = "1"
thiserror = "1.0"
tracing = "0.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
anyhow = "1.0"
wasmtime = "0.12.0"

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
wasmi = "0.6"

[dev-dependencies]
anyhow = "1.0"
atty = "0.2"
clap = "2.33"
opa-go = { version = "0.1.0", path = "../opa-go" }
proptest = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
